force-app/main/default/objects/Premium__c/Premium__c.object-meta.xml
<CustomObject>
    <description>This object will store records associated with a premium offer</description>
    <label>Premium</label>
    <nameField>
        <displayFormat>P={0000}</displayFormat>
        <label>Premium Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Premiums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>