force-app/main/default/objects/Premium__c/fields/Description__c.field-meta.xml
<CustomField>
        <fullName>Description__c</fullName>
        <description>Stores the description to the premium record</description>
        <label>Description</label>
        <type>TextArea</type>
    </CustomField>