force-app/main/default/objects/Premium__c/fields/Premium_Name__c.field-meta.xml
<CustomField>
        <fullName>Premium_Name__c</fullName>
        <label>Premium Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>