force-app/main/default/objects/Premium__c/fields/Product__c.field-meta.xml
<CustomField>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the lookup relationship to Products</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Premiums</relationshipLabel>
        <relationshipName>Premiums</relationshipName>
        <type>Lookup</type>
    </CustomField>